tests/ui/match/issue-82866.stderr
error[E0425]: cannot find value `x`
  --> $DIR/issue-82866.rs:2:11
   |
LL |     match x {
   |           ^ not found in this scope

error[E0412]: cannot find type `v`
  --> $DIR/issue-82866.rs:4:16
   |
LL |         Some::<v>(v) => (),
   |                ^ not found in this scope

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0412, E0425.
For more information about an error, try `rustc --explain E0412`.
